[package]
name = "tts-archiver"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.8.0"
log = "0.4.22"
log4rs = { version = "1.3.0", features = ["all_components", "rolling_file_appender"] }
percent-encoding = "2.3.1"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
structopt = "0.3.26"
tokio = { version = "1.41.0", features = ["full"] }
tree_magic = "0.2.3"
zip = "2.2.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
